--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
 <p>Project's page of the application: De Bruijn Graphs for Detection of Genetic Variations by GBS</p>
 
+<p>The application is hosted in: <a href="https://github.com/marcoscastro/msc_bioinfo">https://github.com/marcoscastro/msc_bioinfo</a></p>
+
 <p>News coming soon...</p>
 
 <p>Doubts? <a href="mailto:mcastrosouza@live.com">mcastrosouza@live.com</a></p>
