--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@ Introduction</h1>
 <p>News coming soon...</p>
 <h1><a class="anchor" id="install_sec"></a>
 Installation</h1>
-<p>In soon... Keep calm! </p>
+<p>In soon... Keep calm!</p>
+<h1><a class="anchor" id="Workflow"></a>
+Workflow</h1>
+<img src="workflow.png" />
 </div></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
