--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li class="current"><a href="index.html"><span>Main&#160;Page</span></a></li>
-      <li><a href="pages.html"><span>Related&#160;Pages</span></a></li>
       <li><a href="annotated.html"><span>Classes</span></a></li>
       <li><a href="files.html"><span>Files</span></a></li>
       <li>
@@ -86,6 +85,7 @@ Introduction</h1>
 <p>Project: De Bruijn Graphs for detection of genetic variations by GBS (Genotyping By Sequencing).</p>
 <p>The project's code is hosted in: <a href="https://github.com/marcoscastro/msc_bioinfo">https://github.com/marcoscastro/msc_bioinfo</a> (private, will be public in soon...)</p>
 <p>The application is being made in C++ language.</p>
+<p>Very useful: <a href="http://www.cs.northwestern.edu/~riesbeck/programming/c++/stl-summary.html">http://www.cs.northwestern.edu/~riesbeck/programming/c++/stl-summary.html</a></p>
 <p>News coming soon...</p>
 <h1><a class="anchor" id="install_sec"></a>
 Installation</h1>
